examples/v0.1/errors/duplicate_declaration.nova
age: N = 19

age: N = 20

// Expected: Variable 'age' already declared.